--- a/language.yml
+++ b/language.yml
@@ -28,19 +28,18 @@ german:
     info:
       msg01: '&e==========&fAfkRecord&e=========='
       msg02: '&c/afkr time [Spieler] &f| Zeigt die Gesamtwerte des Spielers an.'
-      msg03: '&c/afkr top <spielzeit|gesamtzeit|afkzeit> [Zahl] <löschenalterDaten> &f| Zeigt die Topliste an, 10 Plätze pro Seite.'
+      msg03: '&c/afkr top <spielzeit|gesamtzeit|afkzeit> [Zahl] &f| Zeigt die Topliste an, 10 Plätze pro Seite.'
       msg04: '&c/afkr gettime [Zahl] [Spieler] &f| Zeigt die letzten Tage die Zeiten an.'
-      msg05: '&c/afkr convertolddata <tableName> <playerspalte> <zeitspalte> <deleteolddata> &f| Konvertiert alte GesamtZeit in die neue Mysql Tabelle'
       msg06: '&c/afk &f| Setzt den Spieler in Afk-Zustand'
       msg07: '&c/afkr counttime <Tage> [Spieler] &f| Zählt alle Zeiten in einem Zeitraum.'
       msg08: '&c/afkr getafk &f| Zeigt alle afk Spieler auf dem Spigot Server an'
     time:
-      msg01: '&e=====&fAfkRecord &5%player%&e====='
+      msg01: '&e=====&fSpielzeit &5%player%&e====='
       msg02: '&bAktive Spielzeit: &f%ontime% &f| &aPlatz &5%onplace%'
       msg03: '&bAfkzeit:           &f%afktime% &f| &aPlatz &5%afkplace%'
       msg04: '&bGesamte Zeit:    &f%alltime% &f| &aPlatz &5%allplace%'
       msg05: '&bLetzte Aktivität: &f%time%'
-      msg06: '&eKlicke hier für die Topliste der Aktivenzeit'
+      msg06: '&eKlicke hier für die Topliste der Aktivezeit'
       msg07: '&eKlicke hier für die Topliste der Afkzeit'
       msg08: '&eKlicke hier für die Topliste der Gesamtzeit'
     top:
@@ -108,12 +107,11 @@ english:
       msg02: '&c/afkr time [Spieler] &f| Shows the total values of the player.'
       msg03: '&c/afkr top <spielzeit|gesamtzeit|afkzeit> [Zahl] &f| Displays the top list, 10 places per page.'
       msg04: '&c/afkr gettime [Zahl] [Spieler] &f| Shows the times of the last days.'
-      msg05: '&c/afkr convertolddata <tableName> <playerspalte> <zeitspalte> &f| Converts the old total time into the new mysql table'
       msg06: '&c/afk &f| Set the player in afk condition'
       msg07: '&c/afkr counttime <Tage> [Spieler] &f| Counts all times in a period.'
       msg08: '&c/afkr getafk &f| Show all afk player on the spigot server'
     time:
-      msg01: '&e=====&fAfkRecord &5%player%&e====='
+      msg01: '&e=====&fPlayetime &5%player%&e====='
       msg02: '&bActivetime: &f%ontime% &f| &aPlace &5%onplace%'
       msg03: '&bAfktime: &f%afktime% &f| &aPlace &5%afkplace%'
       msg04: '&bTotal time: &f%alltime% &f| &aPlace &5%allplace%'
