--- a/language.yml
+++ b/language.yml
@@ -1,155 +1,155 @@
-german:
-  msg01: '&cDu hast dafür keine Rechte!'
-  msg02: '&cDer Spieler existiert nicht!'
-  msg03: '&cDas angegebene Argument ist keine Zahl!'
-  time:
-    seconds: '&es'
-    minutes: '&6min &f'
-    hours: '&ch &f'
-    days: '&4Tage &f'
-  placement:
-    top0001: '&4'
-    top0002: '&4'
-    top0003: '&6'
-    top0005: '&5'
-    top0010: '&d'
-    top0025: '&9'
-    top0050: '&3'
-    top0100: '&2'
-    top0250: '&a'
-    top0500: '&e'
-    top1000: '&8'
-    top2500: '&7'
-    top5000: '&l'
-    top9999: '&o'
-    above: '&f'
-  CMDAfkRecord:
-    msg01: '&cDeine Eingabe ist fehlerhaft, klicke hier auf den Text um &cweitere Infos zu bekommen!'
-    info:
+German:
+  NoPermission: '&cDu hast dafür keine Rechte!'
+  PlayerNotExist: '&cDer Spieler existiert nicht!'
+  IllegalArgument: '&cDas angegebene Argument ist keine Zahl!'
+  InputIsWrong: '&cDeine Eingabe ist fehlerhaft, klicke hier auf den Text um &cweitere Infos zu bekommen!'
+  Time:
+    Seconds: '&es'
+    Minutes: '&6min &f'
+    Hours: '&ch &f'
+    Days: '&4Tage &f'
+  Placement:
+    Top0001: '&4'
+    Top0002: '&4'
+    Top0003: '&6'
+    Top0005: '&5'
+    Top0010: '&d'
+    Top0025: '&9'
+    Top0050: '&3'
+    Top0100: '&2'
+    Top0250: '&a'
+    Top0500: '&e'
+    Top1000: '&8'
+    Top2500: '&7'
+    Top5000: '&l'
+    Top9999: '&o'
+    Above: '&f'
+  CmdAfkRecord:
+    Info:
       msg01: '&e==========&fAfkRecord&e=========='
       msg02: '&c/afkr time [Spieler] &f| Zeigt die Gesamtwerte des Spielers an.'
       msg03: '&c/afkr top <spielzeit|gesamtzeit|afkzeit> [Zahl] &f| Zeigt die Topliste an, 10 Plätze pro Seite.'
-      msg04: '&c/afkr gettime [Zahl] [Spieler] &f| Zeigt die letzten Tage die Zeiten an.'
+      msg04: '&c/afkr gettime [Zahl] [Spieler] &f| Zeigt die letzten Einträge die Zeiten an.'
       msg06: '&c/afk &f| Setzt den Spieler in Afk-Zustand'
       msg07: '&c/afkr counttime <Tage> [Spieler] &f| Zählt alle Zeiten in einem Zeitraum.'
       msg08: '&c/afkr getafk &f| Zeigt alle afk Spieler auf dem Spigot Server an'
-    time:
-      msg01: '&e=====&fSpielzeit &5%player%&e====='
-      msg02: '&bAktive Spielzeit: &f%ontime% &f| &aPlatz &5%onplace%'
-      msg03: '&bAfkzeit:           &f%afktime% &f| &aPlatz &5%afkplace%'
-      msg04: '&bGesamte Zeit:    &f%alltime% &f| &aPlatz &5%allplace%'
-      msg05: '&bLetzte Aktivität: &f%time%'
-      msg06: '&eKlicke hier für die Topliste der Aktivezeit'
-      msg07: '&eKlicke hier für die Topliste der Afkzeit'
-      msg08: '&eKlicke hier für die Topliste der Gesamtzeit'
-    top:
-      msg01: '&e=====&fTopListe Aktive Spielzeit&e====='
-      msg02: '&e=====&fTopListe Gesamtzeit&e====='
-      msg03: '&e=====&fTopListe Afkzeit&e====='
-      msg04: '&ePlatz &c%place%&f: &6%player% &f| &eZeit: &f%time%'
-      msg05: '&enächste Seite ==>'
-      msg06: '&e<== vorherige Seite'
-    gettime:
-      msg01: '&e=====&fSpielzeiten &5%player%&e====='  
-      msg02: '&f%date%&7: &6Gesamt &f%alltime% | &aAktive &f%ontime% | &cAfk &f%afktime%'
-    counttime:
-      msg01: '&e=====&fSpielzeiten von &5%player% &fder letzten %days% &fTage&e====='
-      msg02: '&bAktive Spielzeit: &f%ontime%'
-      msg03: '&bAfkzeit:           &f%afktime%'
-      msg04: '&bGesamte Zeit:    &f%alltime%'
-      msg05: '&bLetzte Aktivität: &f%time%'
-    getafk:
-      msg01: '&eKein Spieler ist afk!'
-      msg02: '&eAfk Spieler: '
-      playercolor:
-        under15min: '&8'
-        15min: '&7'
-        30min: '&f'
-        45min: '&e'
-        60min: '&6'
-        90min: '&c'
-        120min: '&4'
-    convertolddata:
-      msg01: '&eAlte Daten werden konvertiert, dies kann etwas dauern.'
-      msg02: '&aKonvertierung abgeschlossen!'
-  CMDAfk:
-    msg01: '&eDu bist nun afk!'
-    msg02: '&cDu warst schon afk!'
-    msg03: '&eDu bist nicht mehr afk!'
-english:
-  msg01: '&cYou have no rights for this!'
-  msg02: '&cThe player does not exist!'
-  msg03: '&cThe argument given is not a number!'
-  time:
-    seconds: '&es'
-    minutes: '&6min &f'
-    hours: '&ch &f'
-    days: '&4days &f'
-  placement:
-    top0001: '&4'
-    top0003: '&6'
-    top0005: '&5'
-    top0010: '&d'
-    top0025: '&9'
-    top0050: '&3'
-    top0100: '&2'
-    top0250: '&a'
-    top0500: '&e'
-    top1000: '&8'
-    top2500: '&7'
-    top5000: '&l'
-    top9999: '&o'
-    above: '&f'
-  CMDAfkRecord:
-    msg01: '&cYour entry is incorrect, click on the text here to get &cfurther &cinformation!'
-    info:
+    Time:
+      Headline: '&e=====&fSpielzeit &5%player%&e====='
+      ActiveTime: '&bAktive Spielzeit: &f%ontime% &f| &aPlatz &5%onplace%'
+      AfkTime: '&bAfkzeit:           &f%afktime% &f| &aPlatz &5%afkplace%'
+      Alltime: '&bGesamte Zeit:    &f%alltime% &f| &aPlatz &5%allplace%'
+      LastActive: '&bLetzte Aktivität: &f%time%'
+      HoverAcT: '&eKlicke hier für die Topliste der Aktivezeit'
+      HoverAfT: '&eKlicke hier für die Topliste der Afkzeit'
+      HoverAlT: '&eKlicke hier für die Topliste der Gesamtzeit'
+    Top:
+      HeadlineAcT: '&e=====&fTopListe Aktive Spielzeit&e====='
+      HeadlineAlT: '&e=====&fTopListe Gesamtzeit&e====='
+      HeadlineAfT: '&e=====&fTopListe Afkzeit&e====='
+      PlaceAndTime: '&ePlatz &c%place%&f: &6%player% &f| &eZeit: &f%time%'
+      Next: '&e&nnächste Seite &e==>'
+      Past: '&e<== &nvorherige Seite'
+    GetTime:
+      Headline: '&e=====&fSpielzeiten &5%player%&e====='  
+      Line: '&f%date%&7: &6Gesamt &f%alltime% | &aAktive &f%ontime% | &cAfk &f%afktime%'
+    CountTime:
+      Headline: '&e=====&fSpielzeiten von &5%player% &fder letzten %days% &fTage&e====='
+      ActiveTime: '&bAktive Spielzeit: &f%ontime%'
+      AfkTime: '&bAfkzeit:           &f%afktime%'
+      Alltime: '&bGesamte Zeit:    &f%alltime%'
+      LastActive: '&bLetzte Aktivität: &f%time%'
+    GetAfk:
+      NoPlayerAfk: '&eKein Spieler ist afk!'
+      PlayerAfk: '&eAfk Spieler: '
+      PlayerColor:
+        Under15Min: '&8'
+        15Min: '&7'
+        30Min: '&f'
+        45Min: '&e'
+        60Min: '&6'
+        90Min: '&c'
+        120Min: '&4'
+    Reload:
+      Success: '&aYaml-Dateien wurden neu geladen.'
+      Error: '&cEs wurde ein Fehler gefunden! Siehe Konsole!'
+  CmdAfk:
+    SetAfk: '&eDu bist nun afk!'
+    AlreadyAfk: '&cDu warst schon afk!'
+    NoMoreAfk: '&eDu bist nicht mehr afk!'
+English:
+  NoPermission: '&cYou have no rights for this!'
+  PlayerNotExist: '&cThe player does not exist!'
+  IllegalArgument: '&cThe argument given is not a number!'
+  InputIsWrong: '&cYour entry is incorrect, click on the text here to get &cfurther &cinformation!'
+  Eime:
+    Seconds: '&es'
+    Minutes: '&6min &f'
+    Hours: '&ch &f'
+    Days: '&4days &f'
+  Placement:
+    Top0001: '&4'
+    Top0003: '&6'
+    Top0005: '&5'
+    Top0010: '&d'
+    Top0025: '&9'
+    Top0050: '&3'
+    Top0100: '&2'
+    Top0250: '&a'
+    Top0500: '&e'
+    Top1000: '&8'
+    Top2500: '&7'
+    Top5000: '&l'
+    Top9999: '&o'
+    Above: '&f'
+  CmdAfkRecord:
+    Info:
       msg01: '&e==========&fAfkRecord&e=========='
       msg02: '&c/afkr time [Spieler] &f| Shows the total values of the player.'
       msg03: '&c/afkr top <spielzeit|gesamtzeit|afkzeit> [Zahl] &f| Displays the top list, 10 places per page.'
-      msg04: '&c/afkr gettime [Zahl] [Spieler] &f| Shows the times of the last days.'
+      msg04: '&c/afkr gettime [Zahl] [Spieler] &f| Shows the entry of the last days.'
       msg06: '&c/afk &f| Set the player in afk condition'
       msg07: '&c/afkr counttime <Tage> [Spieler] &f| Counts all times in a period.'
       msg08: '&c/afkr getafk &f| Show all afk player on the spigot server'
-    time:
-      msg01: '&e=====&fPlayetime &5%player%&e====='
-      msg02: '&bActivetime: &f%ontime% &f| &aPlace &5%onplace%'
-      msg03: '&bAfktime: &f%afktime% &f| &aPlace &5%afkplace%'
-      msg04: '&bTotal time: &f%alltime% &f| &aPlace &5%allplace%'
-      msg05: '&Last activity: &f%time%'
-      msg06: '&eClick here for the top list of active time'
-      msg07: '&eClick here for the top list of the Afk time'
-      msg08: '&eClick here for the top list of total time'
-    top:
-      msg01: '&e=====&fTopListe Active Playtime&e====='
-      msg02: '&e=====&fTopListe Total Time&e====='
-      msg03: '&e=====&fTopListe Afktime&e====='
-      msg04: '&ePlace &c%place%&f: &6%player% &f| &eTime: &f%time%'
-      msg05: '&e next page ==>'
-      msg06: '&e<== past page '
-    gettime:
-      msg01: '&e=====&fPlaytime &5%player%&e====='  
-      msg02: '&f%date%&7: &6Totaltime &f%alltime% | &aActive &f%ontime% | &cAfk &f%afktime%'
-    counttime:
-      msg01: '&e=====&fPlaytime from &5%player% &fthe past few %days% &fdays&e====='
-      msg02: '&bActivetime: &f%ontime%'
-      msg03: '&bAfktime: &f%afktime%'
-      msg04: '&bTotal time: &f%alltime%'
-      msg05: '&Last activity: &f%time%'
-    getafk:
-      msg01: '&eNo player is afk!'
-      msg02: '&eAfk Player: '
-      playercolor:
-        under15min: '&8'
-        15min: '&7'
-        30min: '&f'
-        45min: '&e'
-        60min: '&6'
-        90min: '&c'
-        120min: '&4'
-    convertolddata:
-      msg01: '&eOld data will be converted, this may take some time.'
-      msg02: '&aConversion completed!'
-  CMDAfk:
-    msg01: '&eYou are afk now!'
-    msg02: '&cYou were afk already!'
-    msg03: '&eYou are no longer afk!'
+    Time:
+      Headline: '&e=====&fPlayetime &5%player%&e====='
+      ActiveTime: '&bActivetime: &f%ontime% &f| &aPlace &5%onplace%'
+      AfkTime: '&bAfktime: &f%afktime% &f| &aPlace &5%afkplace%'
+      Alltime: '&bTotal time: &f%alltime% &f| &aPlace &5%allplace%'
+      LastActive: '&Last activity: &f%time%'
+      HoverAcT: '&eClick here for the top list of active time'
+      HoverAfT: '&eClick here for the top list of the Afk time'
+      HoverAlT: '&eClick here for the top list of total time'
+    Top:
+      HeadlineAcT: '&e=====&fTopListe Active Playtime&e====='
+      HeadlineAlT: '&e=====&fTopListe Total Time&e====='
+      HeadlineAfT: '&e=====&fTopListe Afktime&e====='
+      PlaceAndTime: '&ePlace &c%place%&f: &6%player% &f| &eTime: &f%time%'
+      Next: '&e next page ==>'
+      Past: '&e<== past page '
+    GetTime:
+      Headline: '&e=====&fPlaytime &5%player%&e====='  
+      Line: '&f%date%&7: &6Totaltime &f%alltime% | &aActive &f%ontime% | &cAfk &f%afktime%'
+    CountTime:
+      Headline: '&e=====&fPlaytime from &5%player% &fthe past few %days% &fdays&e====='
+      ActiveTime: '&bActivetime: &f%ontime%'
+      AfkTime: '&bAfktime: &f%afktime%'
+      Alltime: '&bTotal time: &f%alltime%'
+      LastActive: '&Last activity: &f%time%'
+    GetAfk:
+      NoPlayerAfk: '&eNo player is afk!'
+      PlayerAfk: '&eAfk Player: '
+      PlayerColor:
+        Under15Min: '&8'
+        15Min: '&7'
+        30Min: '&f'
+        45Min: '&e'
+        60Min: '&6'
+        90Min: '&c'
+        120Min: '&4'
+    Reload:
+      Success: '&aYaml file was reloaded.'
+      Error: '&cError found by reloading the files! See console!'
+  CmdAfk:
+    SetAfk: '&eYou are afk now!'
+    AlreadyAfk: '&cYou were afk already!'
+    NoMoreAfk: '&eYou are no longer afk!'
