--- a/language.yml
+++ b/language.yml
@@ -29,17 +29,17 @@ German:
       msg01: '&e==========&fAfkRecord&e=========='
       msg02: '&c/afkr time [Spieler] &f| Zeigt die Gesamtwerte des Spielers an.'
       msg03: '&c/afkr top <spielzeit|gesamtzeit|afkzeit> [Zahl] &f| Zeigt die Topliste an, 10 Plätze pro Seite.'
-      msg04: '&c/afkr gettime [Zahl] [Spieler] &f| Zeigt die letzten Einträge die Zeiten an.'
+      msg04: '&c/afkr gettime [Zahl] [Spieler] &f| Zeigt für die letzten Einträge die Zeiten an.'
       msg06: '&c/afk &f| Setzt den Spieler in Afk-Zustand'
       msg07: '&c/afkr counttime <Tage> [Spieler] &f| Zählt alle Zeiten in einem Zeitraum.'
       msg08: '&c/afkr getafk &f| Zeigt alle afk Spieler auf dem Spigot Server an'
     Time:
-      Headline: '&e=====&fSpielzeit &5%player%&e====='
+      Headline: '&e=====&fSpielzeiten &5%player%&e====='
       ActiveTime: '&bAktive Spielzeit: &f%ontime% &f| &aPlatz &5%onplace%'
       AfkTime: '&bAfkzeit:           &f%afktime% &f| &aPlatz &5%afkplace%'
       Alltime: '&bGesamte Zeit:    &f%alltime% &f| &aPlatz &5%allplace%'
       LastActive: '&bLetzte Aktivität: &f%time%'
-      HoverAcT: '&eKlicke hier für die Topliste der Aktivezeit'
+      HoverAcT: '&eKlicke hier für die Topliste der aktiven Zeit'
       HoverAfT: '&eKlicke hier für die Topliste der Afkzeit'
       HoverAlT: '&eKlicke hier für die Topliste der Gesamtzeit'
     Top:
