--- a/plugin.yml
+++ b/plugin.yml
@@ -1,53 +1,8 @@
 name: AfkRecord
 main: main.java.de.avankziar.afkrecord.spigot.AfkRecord
-version: 7
+version: 8
 author: Avankziar
 website: https://www.spigotmc.org/resources/authors/avankziar.332028/
-load: STARTUP
+api-version: 1.16
 description: Afk Tracker Plugin
 softdepend: [Vault]
-commands:
-  afk:
-    description: A Afk Command
-  afkr:
-    description: A AfkRecord Command
-permissions:
-  afkrecord.cmd.afk:
-    description: Give acess to use /afk.
-    default: false
-  afkrecord.cmd.afkrecord.info:
-    description: Give acess to use /afkr.
-    default: false
-  afkrecord.cmd.afkrecord.time.self:
-    description: Give acess to use /afkr time.
-    default: false
-  afkrecord.cmd.afkrecord.time.other:
-    description: Give acess to use /afkr time <player>.
-    default: false
-  afkrecord.cmd.afkrecord.top.onlinetime:
-    description: Give acess to use /afkr top onlinetime [page].
-    default: false
-  afkrecord.cmd.afkrecord.top.alltime:
-    description: Give acess to use /afkr top alltime [page].
-    default: false
-  afkrecord.cmd.afkrecord.top.afktime:
-    description: Give acess to use /afkr top afktime [page].
-    default: false
-  afkrecord.cmd.afkrecord.gettime.self:
-    description: Give acess to use /afkr gettime [page].
-    default: false
-  afkrecord.cmd.afkrecord.gettime.other:
-    description: Give acess to use /afkr gettime <page> <player>.
-    default: false
-  afkrecord.cmd.afkrecord.counttime.self:
-    description: Give acess to use /afkr counttime [days].
-    default: false
-  afkrecord.cmd.afkrecord.counttime.other:
-    description: Give acess to use /afkr counttime <days> <player>.
-    default: false
-  afkrecord.cmd.afkrecord.counttimelist:
-    description: Give acess to use /afkr counttimelist <days> <permission> [Under Value] [s/m/h/d] [all/afk/on].
-    default: false
-  afkrecord.cmd.afkrecord.getafk:
-    description: Give acess to use /afkr getafk.
-    default: false
