--- a/plugin.yml
+++ b/plugin.yml
@@ -5,4 +5,4 @@ author: Avankziar
 website: https://www.spigotmc.org/resources/authors/avankziar.332028/
 api-version: 1.16
 description: Afk Tracker Plugin
-softdepend: [Vault]
+softdepend: [Vault, PlaceholderAPI, InterfaceHub]
