--- a/bungee.yml
+++ b/bungee.yml
@@ -2,3 +2,4 @@ name: AfkRecord
 main: main.java.de.avankziar.afkrecord.bungee.AfkRecord
 version: 9
 author: Avankziar
+softDepends: [InterfaceHub, RootAdministration]
