--- a/plugin.yml
+++ b/plugin.yml
@@ -6,3 +6,4 @@ website: https://www.spigotmc.org/resources/authors/avankziar.332028/
 api-version: 1.17
 description: Afk Tracker Plugin
 softdepend: [Vault, PlaceholderAPI, InterfaceHub]
+prefix: AFKR
