--- a/pom.xml
+++ b/pom.xml
@@ -176,16 +176,10 @@
 	    </dependency>
 		<!-- InterfaceHub -->
 		<dependency>
-		  <groupId>interface.hub</groupId>
+		  <groupId>me.avankziar</groupId>
 		  <artifactId>interfacehub</artifactId>
-		  <version>2.0</version>
-		  <scope>system</scope>
-		  <systemPath>F:\Datein\Dev\Dev Server 1.21\interfacehub-2-0-0.jar</systemPath>
-    	</dependency>
-		<dependency>
-			<groupId>main.java.me.avankziar</groupId>
-			<artifactId>interfacehub</artifactId>
-			<version>2-0-0</version>
+		  <version>2-0-0</version>
+		  <scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
