--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="https://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>main.java.me.avankziar</groupId>
@@ -178,7 +178,7 @@
 		<dependency>
 		  <groupId>me.avankziar</groupId>
 		  <artifactId>interfacehub</artifactId>
-		  <version>2-0-0</version>
+		  <version>2-0-0-1</version>
 		  <scope>provided</scope>
 		</dependency>
 	</dependencies>
