--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
 		<dependency>
 		  <groupId>me.avankziar</groupId>
 		  <artifactId>interfacehub</artifactId>
-		  <version>2-0-0-1</version>
+		  <version>2-0-0</version>
 		  <scope>provided</scope>
 		</dependency>
 	</dependencies>
