--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>main.java.me.avankziar</groupId>
 	<artifactId>afkrecord</artifactId>
-	<version>10-9-1</version>
+	<version>11-0-0</version>
 	<name>AfkRecord</name>
 	<url>https://github.com/${repository-owner}/${repository-name}.git</url>
     <scm>
@@ -184,7 +184,7 @@
 		<dependency>
 		  <groupId>me.avankziar</groupId>
 		  <artifactId>interfacehub</artifactId>
-		  <version>2-3-0</version>
+		  <version>2-6-0-9</version>
 		  <scope>provided</scope>
 		</dependency>
 	</dependencies>
