--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>main.java.me.avankziar</groupId>
 	<artifactId>afkrecord</artifactId>
-	<version>11-0-0</version>
+	<version>11-1-0</version>
 	<name>AfkRecord</name>
 	<url>https://github.com/${repository-owner}/${repository-name}.git</url>
     <scm>
@@ -59,6 +59,10 @@
 				       <pattern>de.tr7zw.changeme.nbtapi</pattern>
 				       <shadedPattern>main.java.nbtapi</shadedPattern>
 				     </relocation>
+				     <relocation>
+						<pattern>dev.dejvokep.boostedyaml</pattern>
+						<shadedPattern>interfacehub.dev.dejvokep.boostedyaml</shadedPattern>
+					</relocation>
 				   </relocations>
       			</configuration>
       				<executions>
@@ -75,7 +79,7 @@
 			    <artifactId>maven-jar-plugin</artifactId>
 			    <version>2.4</version>
 			    <configuration>
-			      <outputDirectory>F:\Datein\Dev\Dev Server 1.21.4</outputDirectory>
+			      <outputDirectory>F:\Datein\Dev\Dev Server 1.21.8</outputDirectory>
 			      <finalName>${project.artifactId}-${project.version}</finalName>
 			    </configuration>
 			    <executions>
@@ -127,7 +131,7 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.21.4-R0.1-SNAPSHOT</version>
+			<version>1.21.8-R0.1-20250717.204516-1</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- Bungeecord -->
@@ -163,7 +167,7 @@
 		<dependency>
  			<groupId>dev.dejvokep</groupId>
   			<artifactId>boosted-yaml</artifactId>
-  			<version>1.3.5</version>
+  			<version>1.3.7</version>
   			<scope>provided</scope>
 		</dependency>
 		<!-- PlacerHolderApi-->
@@ -184,7 +188,7 @@
 		<dependency>
 		  <groupId>me.avankziar</groupId>
 		  <artifactId>interfacehub</artifactId>
-		  <version>2-6-0-9</version>
+		  <version>2-7-3</version>
 		  <scope>provided</scope>
 		</dependency>
 	</dependencies>
